@@ -22,6 +22,7 @@
 * Fix - Removing the "wp-editor" dependency from the TO Block register function.
 * Fix - Removing the flag-icons vendor CSS and Images.
 * Fix - Fix for 'Content wider than screen' Google Console issue.
+* Fix - Fixed the undefined notice when using and array of post types with WP_Query
 
 ### 1.3.0 - 2 October 2019
 * Fix - Fixed the Post Type enquiry dropdown.
